--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #c43f1e !important;
+  background: #c43f1e ;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
