added new features

--- a/src/components/SignUpComponent/SignUpComponent.css
+++ b/src/components/SignUpComponent/SignUpComponent.css
@@ -127,7 +127,7 @@ form {
   }
   button {
     background-color: #ff6f61;
-    color: #fff;
+    color: #0a0a0a;
     padding: 10px;
     border: none;
     border-radius: 4px;
